Add Firestore parsed receipt views